# toy-llm

./: .env.example  .markdownlint.jsonc  LICENSE  README.md  _openai.py  docker-compose.yml  finetuning.py  main.py  package.json  pyproject.toml  requirements.txt  server.py
.devcontainer/: devcontainer.json
_examples/: _demo-ollama.py  _function_calling.py
api/: main.py
app/: app_graph.py  ecommerce_agent.py  golden_agent.py  main.py  plan_and_execute.py  plan_and_execute_demo.py  planning_agent.py  rag_markdown.py  react_agent.py  react_agent_custom.py  react_agent_custom_reproduce.py  react_agent_demo.py  run_tool_react.py
data/: ecommerce_faq.txt
dockerfiles/: Dockerfile
docs/: function_calling.md  index.md  preliminary.md  ref.md  usage.md
docs/.vitepress/: config.mts
examples/: _agent.py  _function_calling_qwen.py  _function_calling_qwen_ollama.py  _function_callng_ollama.py  _langchain_chat.py  _local_agent copy.py  _rag.py  _stock.py  _transformer_infer.py  agent_personal_assistant.py  app.py  custom_llm_agent.py  plan-and-execute-official.py  plan-and-execute.py  prebuild_agent.py  rag_agent.py  rag_agent_langgraph.py  rag_pdf.py  rag_semantic_search.py  subagent-personal_assistant.py  test_aliyun.py  web_search_agent.py
modules/agent/: README.md
modules/agents/: __init__.py
modules/prompt/: __init__.py
modules/tools/: baidu_search.py  circumference.py
scripts/: create-python-env.venv.sh  download.ms.sh  entrypoint.sh  init.sh  test.sh
src/llm/: aliyun.py
src/log/: interface.py
tests/: test_react_agent.py
tools/: _function_calling_ollama.py  _function_calling_qwen.py  gen-data.py  read.py
toy_agent/: __init__.py  _state.py
toy_agent/agent/: README.md  _base.py  dispatcher.py  executor.py  planner.py  processor.py  react_agent.py  replanner.py  tool_react.py  tool_react_run.py
toy_agent/agents/: _base.py  executor.py  planner.py  replanner.py
toy_agent/flow/: _base.py  factory.py  plan_and_executor copy.py  plan_and_executor.py  plan_and_executor_test.py  plan_and_executor_with_lg_react.py  react.py  react_agent.py  tool_react.py
utils/: _logger.py  logger.py
(+25 files in other folders)
