[project]
name = "toyllm"
version = "0.1.0"
description = ""
authors = [
    {name = "henryzhuhr",email = "henry.zhuhr@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "baidusearch>=1.0.3",
    "dashscope>=1.25.5",
    "faiss-cpu>=1.10.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "loguru>=0.7.3",
    "playwright>=1.51.0",
    "pypdf>=6.4.2",
    "tiktoken>=0.12.0",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
default = true
